--- a/css/main.css
+++ b/css/main.css
@@ -124,8 +124,7 @@ video {
     flex-direction: column;
 }
 
-html,
-body {
+* {
     touch-action: manipulation;
     padding: 0;
     margin: 0;
@@ -141,6 +140,12 @@ body {
     justify-content: center;
     align-items: center;
     padding-left:31px;
+}
+
+html.noscroll {
+    position: fixed; 
+    overflow-y: scroll;
+    width: 100%;
 }
 
 @media screen and (min-width: 600px) {
