--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ video {
 }
 
 #app {
-
+    vertical-align: bottom;
     position: relative;
     width: 100%;
     height: 100vh;
@@ -128,6 +128,7 @@ video {
     touch-action: manipulation;
     padding: 0;
     margin: 0;
+    vertical-align: bottom;
 }
 
 .imgcontent {
