--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ video {
     vertical-align: bottom;
     position: relative;
     width: 100%;
-    height: 100vh;
+   
 }
 
 #textfn {
@@ -132,7 +132,7 @@ video {
 }
 
 .imgcontent {
-    position: fixed;
+    position: absolute;
     bottom: 80px;
     left: 50%;
     width: 300px;
@@ -141,6 +141,7 @@ video {
     justify-content: center;
     align-items: center;
     padding-left:31px;
+    z-index: 10;
 }
 
 html.noscroll {
