--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@
 }
 
 .btwrap {
-    position: fixed;
+    position: absolute;
     left: 50%;
     transform: translateX(-50%);
     bottom: 10px;
@@ -155,7 +155,7 @@ html.noscroll {
 
 
     .btwrap {
-        position: fixed;
+        position: absolute;
         right: 20px;
         transform: translateY(-50%);
         top: 50%;
