--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,8 @@ video {
     vertical-align: bottom;
     position: relative;
     width: 100%;
+    display: flex;
+    justify-content: center;
    
 }
 
